# webtop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  script.js
docs/: json_format.md
frontend/: app.js  index.html  style.css
src/: CMakeLists.txt  defines.hpp  main.cpp  stream_manage.hpp
src/collectors/: cpu_collector.cpp  cpu_collector.hpp  cpu_structs.hpp  memory_collector.cpp  memory_collector.hpp  process_collector.cpp  process_collector.hpp  structs.hpp
src/frontend_bridge/: frontend_bridge.cpp  frontend_bridge.hpp
src/moditor_engine/: CMakeLists.txt  cpu_stat_snapshot.hpp  monitor_engine.cpp  monitor_engine.hpp
src/moditor_engine/process_info/: process_info.cpp  process_info.hpp
src/process_info/: process_info.hpp
src/serializer/: json_serializer.hpp  serializer.cpp  serializer.hpp
src/stat_updater/: stat_updater.cpp  stat_updater.hpp
src/system_monitor/: CMakeLists.txt  system_monitor.cpp  system_monitor.hpp  system_snapshot.hpp
